Another attempt to test fix for found words alignment on Tron theme.

--- a/src/App.css
+++ b/src/App.css
@@ -734,14 +734,14 @@ html.dark-mode .hive-action {
 /*  border: 1px solid #75b371;*/
 /*}*/
 
-/*html.dark-mode #found-words-section #found-words-list-box .found-words-list-item {*/
-/*  color: #00ffff;*/
-/*  text-shadow: 0 0 15px #007086;*/
-/*}*/
+html.dark-mode #found-words-section #found-words-list-box .found-words-list-item {
+  color: #00ffff;
+  text-shadow: 0 0 15px #007086;
+}
 
-/*html.dark-mode #found-words-section #found-words-list-box .found-words-list-item.grey-out {*/
-/*  color: #2b92c1;*/
-/*}*/
+html.dark-mode #found-words-section #found-words-list-box .found-words-list-item.grey-out {
+  color: #2b92c1;
+}
 
 html.dark-mode .points-update {
   background: none;
